--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
 //    compile "io.reactivex.rxjava2:rxjava:2.1.7"
 //    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile(name: 'NativeImgCompress', ext: 'aar')
+    // 可伸缩图片
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
 }
