--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name="com.minyou.manba.activity.GameDetailActivity" />
         <activity android:name="com.minyou.manba.activity.SettingActivity" />
         <activity android:name="com.minyou.manba.activity.FaBuDongTaiActivity" />
+        <activity android:name="com.minyou.manba.activity.BindingPhoneActivity" />
 
         <!-- qq官方申请的key的配置 -->
         <activity
