--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    //compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile files('libs/open_sdk_r5793.jar')
     compile files('libs/mta-sdk-1.6.2.jar')
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
@@ -41,19 +41,11 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.3'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
-//    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-//    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-//    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-//    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-//    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-//    compile 'com.google.code.gson:gson:2.8.2'
-//    compile "io.reactivex.rxjava2:rxjava:2.1.7"
-//    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-    compile(name: 'NativeImgCompress', ext: 'aar')
+    //compile(name: 'NativeImgCompress', ext: 'aar')
     // 可伸缩图片
-    compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    //compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    compile 'com.lzy.widget:imagepicker:0.6.1'
 }
