--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.contrarywind:Android-PickerView:3.2.7'
     //compile(name: 'NativeImgCompress', ext: 'aar')
     // 可伸缩图片
     //compile 'com.github.chrisbanes:PhotoView:1.3.0'
