--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,16 +49,13 @@
         <activity
             android:name="com.minyou.manba.activity.PersonContentActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar" />
-        <activity
-            android:name="com.minyou.manba.activity.DongTaiDetailActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar" />
+        <activity android:name="com.minyou.manba.activity.DongTaiDetailActivity" />
         <activity android:name="com.minyou.manba.activity.ImageViewerActivity" />
         <activity android:name="com.minyou.manba.activity.MyWalletActivity" />
         <activity android:name="com.minyou.manba.activity.ShouCangActivity" />
         <activity android:name="com.minyou.manba.activity.GameCenterActivity" />
         <activity android:name="com.minyou.manba.activity.GameDetailActivity" />
         <activity android:name="com.minyou.manba.activity.SettingActivity" />
-        <activity android:name="com.minyou.manba.activity.FaBuDongTaiActivity" />
         <activity android:name="com.minyou.manba.activity.BindingPhoneActivity" />
         <activity android:name="com.minyou.manba.activity.FaTieActivity" />
         <activity android:name="com.minyou.manba.activity.PersonInfoActivity" />
@@ -89,13 +86,13 @@
             android:label="@string/app_name" />
 
         <provider
-            android:authorities="com.minyou.manba.fileprovider"
             android:name="android.support.v4.content.FileProvider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:authorities="com.minyou.manba.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths"/>
+                android:resource="@xml/filepaths" />
         </provider>
 
     </application>
