--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name="com.minyou.manba.activity.BindingPhoneActivity" />
         <activity android:name="com.minyou.manba.activity.FaTieActivity" />
         <activity android:name="com.minyou.manba.activity.PersonInfoActivity" />
+        <activity android:name="com.minyou.manba.activity.detail.CommentDetailActivity" />
 
         <!-- qq官方申请的key的配置 -->
         <activity
