--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,8 @@
         </activity>
 
         <activity
-            android:name="com.minyou.manba.activity.SociationDetailActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar" />
-        <activity
-            android:name="com.minyou.manba.activity.PersonContentActivity"/>
+            android:name="com.minyou.manba.activity.SociationDetailActivity"/>
+        <activity android:name="com.minyou.manba.activity.PersonContentActivity" />
         <activity android:name="com.minyou.manba.activity.DongTaiDetailActivity" />
         <activity android:name="com.minyou.manba.activity.ImageViewerActivity" />
         <activity android:name="com.minyou.manba.activity.MyWalletActivity" />
