--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,6 @@
             android:name="com.minyou.manba.activity.HomeActivity"
             android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-
         </activity>
 
         <activity
@@ -59,6 +53,7 @@
         <activity android:name="com.minyou.manba.activity.detail.CommentDetailActivity" />
         <activity android:name="com.minyou.manba.activity.PersonGalleryActivity" />
         <activity android:name="com.minyou.manba.activity.MyDongTaiActivity" />
+        <activity android:name="com.minyou.manba.activity.UpVoteListActivity" />
 
         <!-- qq官方申请的key的配置 -->
         <activity
