--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     // 可伸缩图片
     //compile 'com.github.chrisbanes:PhotoView:1.3.0'
     //compile 'com.lzy.widget:imagepicker:0.6.1'
+    // 友盟
+    compile 'com.umeng.analytics:analytics:latest.integration'
     compile project(':imagepicker')
 }
