--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name="com.minyou.manba.activity.MyGuildListActivity" />
         <activity android:name="com.minyou.manba.activity.FansActivity" />
         <activity android:name="com.minyou.manba.activity.FollowListActivity" />
+        <activity android:name="com.minyou.manba.activity.FeedbackActivity" />
 
         <!-- qq官方申请的key的配置 -->
         <activity
